fix img size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1174,7 +1174,7 @@ body {
   padding: 20px 40px;
 }
 
-.partners__logo > img {
+.partners__logo img {
   width: 100%;
   height: 100%;
 }
